perform Integiryt tests on the database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
             "driver": "MySQL",
             "name": "Local MySQL",
             "database": "employees",
-            "username": "root"
+            "username": "root",
+            "password": "mysql@123"
         }
     ]
 }
